Does not work when collection 'holdout' is set to 'indirect only' #66362

Closed
opened 2019-07-03 04:31:46 +02:00 by a · 20 comments

System Information
Operating system: MacOS10.14.5
Graphics card: AMD Radeon Pro 580X OpenGL Engine ATI Technologies Inc. 4.1 ATI-2.9.26

Blender Version
Broken: version: 2.80 (sub 74), branch: master, commit date: 2019-07-02 22:33, hash: 50ccbe6bb2
Worked: (optional)

Short description of error
Previously reported, but the latest version has not been fixed
Report again with the video file, as the previous report does not recognize the problem
Hold out.mp4
Does not work when collection 'holdout' is set to 'indirect only'

Exact steps for others to reproduce the error

  1. Register an object in the collection
  2. Set the holdout for that collection
  3. Render (holdout works)
  4. Set "indirect only" of the collection in that state
  5. Render (holdout does not work, only "indirect" works)
**System Information** Operating system: MacOS10.14.5 Graphics card: AMD Radeon Pro 580X OpenGL Engine ATI Technologies Inc. 4.1 ATI-2.9.26 **Blender Version** Broken: version: 2.80 (sub 74), branch: master, commit date: 2019-07-02 22:33, hash: `50ccbe6bb2` Worked: (optional) **Short description of error** Previously reported, but the latest version has not been fixed Report again with the video file, as the previous report does not recognize the problem [Hold out.mp4](https://archive.blender.org/developer/F7563064/Hold_out.mp4) Does not work when collection 'holdout' is set to 'indirect only' **Exact steps for others to reproduce the error** 1. Register an object in the collection 2. Set the holdout for that collection 3. Render (holdout works) 4. Set "indirect only" of the collection in that state 5. Render (holdout does not work, only "indirect" works)
Author

Added subscriber: @box_channel

Added subscriber: @box_channel

#70668 was marked as duplicate of this issue

#70668 was marked as duplicate of this issue

Added subscriber: @rocketman

Added subscriber: @rocketman

This looks like the expected behavior to me. "Indirect Only" means that the collection casts shadows and reflections, but does not appear directly. If the object appeared as a holdout, that would be direct shading.

What is the result you were expecting?

This looks like the expected behavior to me. "Indirect Only" means that the collection casts shadows and reflections, but does not appear directly. If the object appeared as a holdout, that would be direct shading. What is the result you were expecting?

Added subscriber: @sebastian_k

Added subscriber: @sebastian_k

I agree that this looks like a bug, or at least it's not the logical behavior.
I would expect Holdout to "override" Indirect Only.
With Indirect Only you see only the indirect influence of the object.
With Holdout you see the indirect influence of the object to the scene, but also it cuts a hole in the render, so to speak.
So funtionality wise Indirect Only is included in Holdout. So if both are activated, I think it should be rendered as holdout.

I agree that this looks like a bug, or at least it's not the logical behavior. I would expect Holdout to "override" Indirect Only. With Indirect Only you see only the indirect influence of the object. With Holdout you see the indirect influence of the object to the scene, but *also* it cuts a hole in the render, so to speak. So funtionality wise Indirect Only is included in Holdout. So if both are activated, I think it should be rendered as holdout.

Added subscriber: @machieb

Added subscriber: @machieb

As I know its not intended to check indirect only and holdout together?!

As I know its not intended to check indirect only and holdout together?!
Author

My opinion is simple
If Holdout is on, "Holdout" should work
If "indirect only" takes precedence, "Holdout" should be turned off automatically in the UI
It is very difficult to understand that it doesn't work even though "Holdout" is on
This is the same even if "Holdout" is given priority
In that case, "indirect only" should be turned off automatically
It should be clearly indicated on the UI that only one side can be used like an electrical switch

My opinion is simple If Holdout is on, "Holdout" should work If "indirect only" takes precedence, "Holdout" should be turned off automatically in the UI It is very difficult to understand that it doesn't work even though "Holdout" is on This is the same even if "Holdout" is given priority In that case, "indirect only" should be turned off automatically It should be clearly indicated on the UI that only one side can be used like an electrical switch
Author

I also want to ask
Why did you create a UI that can turn both on, but only one can be used?
If you can only use one, you should change the UI

I also want to ask Why did you create a UI that can turn both on, but only one can be used? If you can only use one, you should change the UI
Author

This is the video of blender2.79b
I think the same situation as setting "Indirect only" and "Holdout" in blender 2.8 at the same time, but "Holdout" is working
Why did the behavior change in blender 2.8?
This is the reason I think is a bug
2.79b.mp4

This is the video of blender2.79b I think the same situation as setting "Indirect only" and "Holdout" in blender 2.8 at the same time, but "Holdout" is working Why did the behavior change in blender 2.8? This is the reason I think is a bug [2.79b.mp4](https://archive.blender.org/developer/F7564381/2.79b.mp4)

I understand now, and I agree that this is not ideal behavior.

I also noticed another regression related to this matter: In 2.7, it is possible to use a layer as a holdout without indirectly affecting the scene by using the Exclude feature:

screen.png

It is common to want a holdout that does not contribute indirectly to the render, but there is no easy way of doing this in 2.8! You can disable the ray visibility for each object in the collection, but that is tedious and interferes with those objects being rendered elsewhere. Perhaps a solution could be implemented that fixes both these issues:

If "Holdout" is enabled for a collection, then the function of the "Indirect Only" setting should change, so that the collection eitherdoes or does notcontribute indirectly to the scene.

I will leave this decision to a developer.

I understand now, and I agree that this is not ideal behavior. I also noticed another regression related to this matter: In 2.7, it is possible to use a layer as a holdout *without* indirectly affecting the scene by using the Exclude feature: ![screen.png](https://archive.blender.org/developer/F7565664/screen.png) It is common to want a holdout that does not contribute indirectly to the render, but there is no easy way of doing this in 2.8! You can disable the ray visibility for each object in the collection, but that is tedious and interferes with those objects being rendered elsewhere. Perhaps a solution could be implemented that fixes both these issues: *If "Holdout" is enabled for a collection, then the function of the "Indirect Only" setting should change, so that the collection either*does or does not*contribute indirectly to the scene.* I will leave this decision to a developer.
Member

Added subscribers: @brecht, @lichtwerk

Added subscribers: @brecht, @lichtwerk
Member

@brecht: is this something you could look at or decide upon?

  • 2.8 holdout + indirect only: looks like a bug to me [I am with @sebastian_k here]
  • 2.79 exclude + mask "feature missing": this apparently already changed from 2.79b to 2.79 branch? (in the current branch, seems like setting a layer to both exclude and mask will at least render it's shadows...)
@brecht: is this something you could look at or decide upon? - 2.8 holdout + indirect only: looks like a bug to me [I am with @sebastian_k here] - 2.79 exclude + mask "feature missing": this apparently already changed from 2.79b to 2.79 branch? (in the current branch, seems like setting a layer to both exclude and mask will at least render it's shadows...)
Brecht Van Lommel self-assigned this 2019-07-04 17:17:26 +02:00

This issue was referenced by blender/cycles@d182dc418a

This issue was referenced by blender/cycles@d182dc418aaee8f440c8f28dbc84738e96f2b62b

This issue was referenced by 2740bdfff9

This issue was referenced by 2740bdfff9f38807301fb3ee4d6a4949d8d8bb20

The behavior regarding exclude is a known limitation at the moment, there is a comment in the code about it. The dependency graph does not evaluate the excluded objects at all so this requires a different design.

The holdout + indirect only behavior I can fix.

The behavior regarding exclude is a known limitation at the moment, there is a comment in the code about it. The dependency graph does not evaluate the excluded objects at all so this requires a different design. The holdout + indirect only behavior I can fix.

Changed status from 'Open' to: 'Resolved'

Changed status from 'Open' to: 'Resolved'

Added subscriber: @RainerTrummer

Added subscriber: @RainerTrummer

Added subscriber: @Sparazza

Added subscriber: @Sparazza
Sign in to join this conversation.
No Label
Interest
Alembic
Interest
Animation & Rigging
Interest
Asset Browser
Interest
Asset Browser Project Overview
Interest
Audio
Interest
Automated Testing
Interest
Blender Asset Bundle
Interest
BlendFile
Interest
Collada
Interest
Compatibility
Interest
Compositing
Interest
Core
Interest
Cycles
Interest
Dependency Graph
Interest
Development Management
Interest
EEVEE
Interest
EEVEE & Viewport
Interest
Freestyle
Interest
Geometry Nodes
Interest
Grease Pencil
Interest
ID Management
Interest
Images & Movies
Interest
Import Export
Interest
Line Art
Interest
Masking
Interest
Metal
Interest
Modeling
Interest
Modifiers
Interest
Motion Tracking
Interest
Nodes & Physics
Interest
OpenGL
Interest
Overlay
Interest
Overrides
Interest
Performance
Interest
Physics
Interest
Pipeline, Assets & IO
Interest
Platforms, Builds & Tests
Interest
Python API
Interest
Render & Cycles
Interest
Render Pipeline
Interest
Sculpt, Paint & Texture
Interest
Text Editor
Interest
Translations
Interest
Triaging
Interest
Undo
Interest
USD
Interest
User Interface
Interest
UV Editing
Interest
VFX & Video
Interest
Video Sequencer
Interest
Virtual Reality
Interest
Vulkan
Interest
Wayland
Interest
Workbench
Interest: X11
Legacy
Blender 2.8 Project
Legacy
Milestone 1: Basic, Local Asset Browser
Legacy
OpenGL Error
Meta
Good First Issue
Meta
Papercut
Meta
Retrospective
Meta
Security
Module
Animation & Rigging
Module
Core
Module
Development Management
Module
EEVEE & Viewport
Module
Grease Pencil
Module
Modeling
Module
Nodes & Physics
Module
Pipeline, Assets & IO
Module
Platforms, Builds & Tests
Module
Python API
Module
Render & Cycles
Module
Sculpt, Paint & Texture
Module
Triaging
Module
User Interface
Module
VFX & Video
Platform
FreeBSD
Platform
Linux
Platform
macOS
Platform
Windows
Priority
High
Priority
Low
Priority
Normal
Priority
Unbreak Now!
Status
Archived
Status
Confirmed
Status
Duplicate
Status
Needs Info from Developers
Status
Needs Information from User
Status
Needs Triage
Status
Resolved
Type
Bug
Type
Design
Type
Known Issue
Type
Patch
Type
Report
Type
To Do
No Milestone
No project
No Assignees
8 Participants
Notifications
Due Date
The due date is invalid or out of range. Please use the format 'yyyy-mm-dd'.

No due date set.

Dependencies

No dependencies set.

Reference: blender/blender#66362
No description provided.