Fix T66362, T66004: Cycles holdout should override indirect only

Now it works again like 2.7, rather than objects disappearing from camera
rays when both options are on.